# capper

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MAINTAINERS.md  README.md  SECURITY.md  capper_package_plan.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  compat-latest.yml  publish.yml
capper/: __init__.py  _deprecations.py  barcode.py  base.py  cli.py  color.py  commerce.py  date_time.py  fields.py  file.py  finance.py  geo.py  internet.py  misc.py  person.py  phone.py  registry.py  strategies.py  text.py
capper/examples/: user_factory.py
capper/tests/: README.md  __init__.py  benchmark_core.py  conftest.py  test_bug_fixes.py  test_cli.py  test_deprecations.py  test_docs_examples.py  test_edge_cases.py  test_faker_field.py  test_hypothesis_strategies.py  test_polyfactory_integration.py  test_registry.py  test_thread_safety.py  test_types.py
docs/: FAKER_PROVIDERS.md  README.md  ROADMAP.md  api.md  benchmarks.md  capper_package_plan.md  compatibility.md  extending.md  maintenance_review.md  release_checklist.md
docs/examples/: custom_types.py  dataclasses_and_attrs.py  django_patterns.py  fastapi_pydantic.py  getting_started.py  models_and_factories.py  reproducible_data.py  test_setup_templates.py
docs/notebooks/: 01_getting_started.ipynb  02_models_and_batch.ipynb  03_reproducible_data.ipynb  04_custom_types.ipynb  README.md
docs/user_guides/: custom_types.md  dataclasses_and_attrs.md  django_patterns.md  fastapi_pydantic.md  getting_started.md  models_and_factories.md  project_structure.md  reproducible_data.md  test_setup_templates.md
