[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capper"
version = "0.2.0"
description = "Semantic, typed wrappers for Faker with automatic Polyfactory integration"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Odos Matthews", email = "odosmatthews@gmail.com" },
]
dependencies = [
    "Faker>=20.0",
    "Polyfactory>=2.0",
]

[project.optional-dependencies]
pydantic = [
    "pydantic>=2.0",
]
dev = [
    "pytest>=7.0",
    "pydantic>=2.0",
]

[project.urls]
Documentation = "https://github.com/eddiethedean/capper#readme"
Repository = "https://github.com/eddiethedean/capper"

[tool.setuptools.packages.find]
where = ["."]
include = ["capper*"]

[tool.pytest.ini_options]
testpaths = ["capper/tests"]
pythonpath = ["."]
