[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capper"
version = "0.2.0"
description = "Semantic, typed wrappers for Faker with automatic Polyfactory integration"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Odos Matthews", email = "odosmatthews@gmail.com" },
]
dependencies = [
    "Faker>=20.0",
    "Polyfactory>=2.0",
]

[project.optional-dependencies]
pydantic = [
    "pydantic>=2.0",
]
hypothesis = [
    "hypothesis>=6.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "pydantic>=2.0",
    "ruff>=0.4",
    "mypy>=1.0",
    "hypothesis>=6.0",
]

[project.urls]
Documentation = "https://github.com/eddiethedean/capper#readme"
Repository = "https://github.com/eddiethedean/capper"

[project.scripts]
capper = "capper.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["capper*"]

[tool.pytest.ini_options]
testpaths = ["capper/tests"]
pythonpath = ["."]
addopts = ["-v", "--tb=short"]

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = ["docs/notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
exclude = ["capper/tests"]
