[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capper"
version = "1.0.0"
description = "Semantic, typed wrappers for Faker with automatic Polyfactory integration"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Odos Matthews", email = "odosmatthews@gmail.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries",
]
keywords = ["faker", "testing", "factories", "polyfactory", "hypothesis", "pydantic"]
dependencies = [
    "Faker>=20.0",
    "Polyfactory>=2.0",
]

[project.optional-dependencies]
pydantic = [
    "pydantic>=2.0",
]
hypothesis = [
    "hypothesis>=6.0",
]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "pydantic>=2.0",
    "ruff>=0.4",
    "mypy>=1.0",
    "hypothesis>=6.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocstrings[python]>=0.24",
]

[project.urls]
Documentation = "https://github.com/eddiethedean/capper#readme"
Repository = "https://github.com/eddiethedean/capper"

[project.scripts]
capper = "capper.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["capper*"]

[tool.pytest.ini_options]
testpaths = ["capper/tests"]
pythonpath = ["."]
addopts = ["-v", "--tb=short"]
markers = ["benchmark: performance benchmarks (deselect with -m 'not benchmark')"]

[tool.coverage.run]
source = ["capper"]
omit = ["capper/tests/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["docs/notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
exclude = ["capper/tests"]
